--- a/client/index.html
+++ b/client/index.html
@@ -7,22 +7,22 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
 
-    <script src="data/data.js"></script>
+    <script src="data/data.js"></script> <!-- mp3 files, titles, artist -->
 
-    <script src="models/SongModel.js"></script>
-    <script src="collections/Songs.js"></script>
-    <script src="collections/SongQueue.js"></script>
-    <script src="models/AppModel.js"></script>
+    <script src="models/SongModel.js"></script> <!-- the backbone.model for a song -->
+    <script src="collections/Songs.js"></script> <!-- collection for the song models -->
+    <script src="collections/SongQueue.js"></script> <!-- collection for song models (queue) -->
+    <script src="models/AppModel.js"></script>  <!-- sets up current song and queue'ed songs -->
 
-    <script src="views/PlayerView.js"></script>
-    <script src="views/LibraryView.js"></script>
-    <script src="views/LibraryEntryView.js"></script>
-    <script src="views/AppView.js"></script>
+    <script src="views/PlayerView.js"></script> <!-- the visual music player for currently playing songs -->
+    <script src="views/LibraryView.js"></script> <!-- the library of songs in a table format -->
+    <script src="views/LibraryEntryView.js"></script> <!-- adds new songs to the library table -->
+    <script src="views/AppView.js"></script> <!-- renders the view of the whole app, and music player, and music library -->
 
     <script>
       $(function() {
         // set up model objects
-        var library = new Songs(songData);
+        var library = new Songs(songData); // ./data/data.js
         var app = new AppModel({library: library});
 
         // build a view for the top level of the whole app
